# web-client-server-binary-size-benchmark-rs

./: .gitignore  Cargo.toml  README.md  RULES.md  generate_results.sh
.cargo/: .gitkeep
actix_full/: Cargo.toml
actix_full/src/: main.rs
actix_reqwest/: Cargo.toml
actix_reqwest/src/: main.rs
dummy/: Cargo.toml
dummy/src/: main.rs
fixtures/: response_body.json
fixtures/ssh/: key  key.pub
gotham_reqwest/: Cargo.toml
gotham_reqwest/src/: main.rs
hyper_full/: Cargo.toml
hyper_full/src/: main.rs
hyper_reqwest/: Cargo.toml
hyper_reqwest/src/: main.rs
iron_reqwest/: Cargo.toml
iron_reqwest/src/: main.rs
shiny_app/: app.R  gen_medium_graphs.R  gen_readme_graphs.R
shiny_app/rsconnect/shinyapps.io/jonathas-conceicao/: web-client-server-binary-size-benchmark-rs.dcf
src/: actix_full.rs  dummy.rs  lib.rs  main.rs
surf_tide/: Cargo.toml
surf_tide/src/: main.rs
surf_warp/: Cargo.toml
tide_surf/: Cargo.toml
tide_surf/src/: main.rs
warp_reqwest/: Cargo.toml
warp_reqwest/src/: main.rs
warp_surf/: Cargo.toml
warp_surf/src/: main.rs
