# Copyright (C) 2020 O.S. Systems Sofware LTDA
#
# SPDX-License-Identifier: Apache-2.0

[package]
name = "rust-web-client-server-testing"
version = "0.1.0"
authors = ["Jonathas-Conceicao <jonathas.conceicao@ossystems.com.br"]
edition = "2018"
publish = false

[lib]
name = "rwcst"

[[bin]]
name = "dummy"

[dependencies]
# General dependencies
async-trait = "0.1"
mockito = { version = "0.24", default-features = false }
openssl = "0.10"
serde = { version = "1", default-features = false, features = ["derive"] }
serde_json = { version = "1", default-features = false, features = ["std"] }
tokio = { version = "0.2", features = ["macros"] }

[patch.crates-io]
mockito = { git = "https://github.com/OSSystems/mockito.git", branch = "topic/multiple_mock_matching" }
