# Copyright (C) 2020 O.S. Systems Sofware LTDA
#
# SPDX-License-Identifier: Apache-2.0

[package]
name = "rust-web-client-server-testing"
version = "0.1.0"
authors = ["Jonathas-Conceicao <jonathas.conceicao@ossystems.com.br"]
edition = "2018"
publish = false

[lib]
name = "rwcst"

[workspace]
members = [
        "dummy",
        "actix_full",
        "actix_reqwest",
        "gotham_reqwest",
        "hyper_reqwest",
        "warp_reqwest",
]

[dependencies]
async-trait = "0.1"
mockito = { version = "0.25", default-features = false }
openssl = "0.10"
serde = { version = "1", default-features = false, features = ["derive"] }
serde_json = { version = "1", default-features = false, features = ["std"] }
