# Copyright (C) 2020 O.S. Systems Sofware LTDA
#
# SPDX-License-Identifier: Apache-2.0

[package]
name = "dummy"
version = "0.1.0"
authors = ["Jonathas-Conceicao <jonathas.conceicao@ossystems.com.br"]
edition = "2018"
publish = false

[dependencies]
async-trait = "0.1"
rwcst = { path = "..", package = "rust-web-client-server-testing" }
tokio = { version = "0.2", features = ["macros"] }
