# Copyright (C) 2020 O.S. Systems Sofware LTDA
#
# SPDX-License-Identifier: Apache-2.0

[package]
name = "gotham_reqwest"
version = "0.1.0"
authors = ["asakiz <asakizin@gmail.com>"]
edition = "2018"

[dependencies]
async-trait = "0.1"
derive_more = { version = "0.99", default-features = false, features = ["from"] }
gotham = { git = "https://github.com/gotham-rs/gotham", package = "gotham" }
gotham_derive = { git = "https://github.com/gotham-rs/gotham", package = "gotham_derive" }
mime = "0.3"
reqwest = { version = "0.10", default-features = false, features = ["json", "native-tls"] }
rwcst = { path = "..", package = "rust-web-client-server-testing" }
serde_json = { version = "1", default-features = false, features = ["std"] }
tokio = { version = "0.2", features = ["macros"] }
