# Copyright (C) 2020 O.S. Systems Sofware LTDA
#
# SPDX-License-Identifier: Apache-2.0

[package]
name = "hyper_reqwest"
version = "0.1.0"
authors = ["asakiz <asakizin@gmail.com>"]
edition = "2018"

[dependencies]
actix-rt = "1"
actix-web = { version = "3.0.0-alpha.1", default-features = false }
async-trait = "0.1"
derive_more = { version = "0.99", default-features = false, features = ["from"] }
futures-util = "0.3"
hyper = "0.13"
reqwest = { version = "0.10", default-features = false, features = ["json", "native-tls"] }
http = "0.2"
rwcst = { path = "..", package = "rust-web-client-server-testing" }
tokio = { version = "0.2", features = ["macros"] }
serde_json = "1.0"
