# Copyright (C) 2020 O.S. Systems Sofware LTDA
#
# SPDX-License-Identifier: Apache-2.0

[package]
name = "hyper_reqwest"
version = "0.1.0"
authors = ["asakiz <asakizin@gmail.com>"]
edition = "2018"

[dependencies]
async-trait = "0.1"
derive_more = { version = "0.99", default-features = false, features = ["from", "display", "error"] }
futures-util = "0.3"
hyper = { version = "0.13", default-features = false }
reqwest = { version = "0.10", default-features = false, features = ["json", "native-tls"] }
bench = { path = "..", package = "web-client-server-binary-size-benchmark" }
serde_json = "1.0"
tokio = { version = "0.2", features = ["macros"] }
