# Copyright (C) 2020 O.S. Systems Sofware LTDA
#
# SPDX-License-Identifier: Apache-2.0

[package]
name = "warp_surf"
version = "0.1.0"
authors = ["asakiz <asakizin@gmail.com>"]
edition = "2018"

[dependencies]
async-std = { version = "1", default-features = false, features = ["tokio02"] }
async-trait = "0.1"
derive_more = { version = "0.99", default-features = false, features = ["from"] }
futures-util = "0.3"
http-client = { version = "3.0", default-features = false, features = ["h1_client"] }
bench = { path = "..", package = "web-client-server-binary-size-benchmark" }
surf = { version = "2.0.0-alpha.4", default-features = false, features = ["h1-client"] }
tokio = { version = "0.2", features = ["macros", "rt-core"] }
warp = "0.2"
